--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
             <version>4.12</version>
             <scope>test</scope>
         </dependency>
-    </dependencies>
+    </dependencies>>
     <build>
         <plugins>
             <plugin>
@@ -26,6 +26,6 @@
                     <target>1.8</target>
                 </configuration>
             </plugin>
-        </plugins>
-    </build>
+        </plugins>>
+    </build>>
 </project>
